# ace

./: .env.example  .gitignore  Cargo.toml  README.md
app/: Cargo.toml
data/api/: Cargo.toml
data/api/src/: lib.rs  raindrop.rs  raindrop_api.rs
data/repository/: Cargo.toml
data/repository/src/: lib.rs  raindrop.rs
kernel/: Cargo.toml
kernel/src/repository/: mod.rs  raindrop.rs
